<resources>
    <string name="app_name">Watch IT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_button_description">Add</string>
    <string name="sign_out_btn">Sign Out</string>
    <string name="settings_btn">Settings</string>
    <string name="watched_list">Watched Movies</string>
    <string name="favori_list">Favori Movies</string>
    <string name="movie_count">Movie Count</string>
    <string name="movie_time">Movie Time</string>
    <string name="new_email">New Email</string>
    <string name="password">Password</string>
    <string name="new_username">New Username</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>

</resources>