<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.ProfileFragment"
    android:background="@color/colorPrimary">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profileLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="406dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="212dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

            <TextView
                android:id="@+id/movie_text"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_weight="1"
                android:background="@color/material_dynamic_natural80"
                android:gravity="center"
                android:text="@string/movie_count"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/movie_time_text"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_weight="1"
                android:background="@color/material_dynamic_natural80"
                android:gravity="center"
                android:text="@string/movie_time"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="406dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="312dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/count_movie_text"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_weight="1"
                android:background="@color/material_dynamic_natural80"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/total_movie_time_text"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_weight="1"
                android:background="@color/material_dynamic_natural80"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="268dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            app:layout_constraintVertical_bias="0.0">

            <Button
                android:id="@+id/watched_list_btn"
                android:layout_width="237dp"
                android:layout_height="51dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:text="@string/watched_list" />

            <Button
                android:id="@+id/favori_list_btn"
                android:layout_width="237dp"
                android:layout_height="51dp"
                android:layout_marginTop="16dp"
                android:text="@string/favori_list"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/favori_list_btn" />

            <Button
                android:id="@+id/settings_btn"
                android:layout_width="237dp"
                android:layout_height="51dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/settings_btn" />

            <Button
                android:id="@+id/sign_out_btn2"
                android:layout_width="237dp"
                android:layout_height="51dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:text="@string/sign_out_btn" />


        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/view"
            android:layout_width="90dp"
            android:layout_height="105dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:background="@color/colorPrimary"
            android:elevation="12dp"
            android:innerRadius="0dp"
            android:shape="ring"
            android:thicknessRatio="1.9"
            app:cardCornerRadius="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/profile_img"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="@+id/name"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/user_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="33dp"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <TextView
            android:id="@+id/email_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@color/material_dynamic_natural80"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_name_text" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
